[NANOHUB][#267498][COM_COURSES] prevent overlap of controls and input field

--- a/components/com_courses/assets/css/form.css
+++ b/components/com_courses/assets/css/form.css
@@ -40,7 +40,7 @@ label {
 	display: block;
 }
 .courses-form form {
-	margin-top: 50px;
+	margin-top: 65px;
 }
 #group-box {
 	opacity: 0.5;
